--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -54,4 +54,12 @@ const { title } = Astro.props;
 		margin: 0;
 		font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 	}
+
+	p {
+		color: #666;
+		font-size: 0.8rem;
+		line-height: 1.5;
+		margin: 0;
+		text-wrap: pretty;
+	}
 </style>
