--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,13 +1,31 @@
 ---
-import Layout from '../layouts/Layout.astro';
+import Layout from '@/layouts/Layout.astro'
+
+import About from '@/components/sections/About.astro'
+import Education from '@/components/sections/Education.astro'
+import Experience from '@/components/sections/Experience.astro'
+import Head from '@/components/sections/Head.astro'
+import Projects from '@/components/sections/Projects.astro'
+import Skills from '@/components/sections/Skills.astro'
+import KeyboardManager from '@/components/KeyboardManager.astro'
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="Minimalist CV">
 	<main>
-		
+		<Head />
+		<About />
+		<Experience />
+		<Education />
+		<Projects />
+		<Skills />
 	</main>
+	<KeyboardManager />
 </Layout>
 
 <style>
-	
+	main {
+		padding: 4rem;
+		margin: auto;
+		width: 100%;
+	}
 </style>
